[package]
name = "h3-quinn-interop"
description = "An interop test runner for QUIC and H3"
homepage = "https://github.com/marten-seemann/quic-interop-runner/"
version = "0.0.0"
authors = ["Jean-Christophe BEGUE <jc.begue@pm.me>"]
edition = "2018"

[dependencies]
bytes = "1"
futures = "0.3"
h3 = "0.0.2"
h3-quinn = "0.0.3"
http = "0.2"
quinn = "0.10"
rcgen = { version = "0.7.0" }
rustls-native-certs = "0.6"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "0.2"
structopt = "0.3"
tokio = { version = "1", features = ["rt", "macros", "net", "rt-multi-thread", "io-std", "io-util", "fs"] }
tracing = "0.1.10"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
