[package]
name = "h3-quinn-interop"
description = "An interop test runner for QUIC and H3"
homepage = "https://github.com/marten-seemann/quic-interop-runner/"
version = "0.0.0"
authors = ["Jean-Christophe BEGUE <jc.begue@pm.me>"]
edition = "2018"

[dependencies]
bytes = "1"
futures = "0.3"
h3 = "0.0.6"
h3-quinn = "0.0.7"
http = "1"
quinn = { version = "0.11.2", default-features = false, features = [ "rustls", "ring", "runtime-tokio" ] }
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "io-std", "io-util", "fs"] }
tracing = "0.1.10"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
